fix portfolio section markup and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -227,8 +227,6 @@ margin: 0 auto 48px;
 }
 
 .team-name {
-    margin-top: 32px;
-    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -238,11 +236,11 @@ margin: 0 auto 48px;
 }
 
 .team-position {
-    margin-bottom: 32px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
     color: #434455;
 }
 
@@ -265,6 +263,11 @@ margin: 0 auto 48px;
 }
 .portfolio-item {
     width: calc((100% - 48px) / 3);
+}
+.portfolio-img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 .portfolio-info {
     border-bottom: 1px solid #e7e9fc;
